fix(nav): increase z-index for mobile screens so nav stays always on top

--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -48,7 +48,7 @@ $dark-grey: #4C4947;
 $medium-grey: #7F7A77;
 $light-grey: #9F9894;
 $dark-white: #E5E3E1;
-$offwhite: #FCFCFA;
+$offwhite: #FCFCF7;
 $white: #fff;
 $orange: #E5AB24;
 $skyblue: #F7FAFF;
