--- a/_sass/partials/_nav.scss
+++ b/_sass/partials/_nav.scss
@@ -200,6 +200,6 @@
     top: 0;
     left: 0;
     right: 0;
-    z-index: 2;
+    z-index: 10;
   }
 }
