--- a/assets/main.css
+++ b/assets/main.css
@@ -685,7 +685,7 @@ a {
   z-index: 6;
   border-top: #E5E3E1 solid 1px;
   border-bottom: #E5E3E1 solid 1px;
-  background-color: #FCFCFA; }
+  background-color: #FCFCF7; }
   .nav__wrapper {
     display: -webkit-box;
     display: -moz-box;
@@ -851,7 +851,7 @@ a {
     top: 0;
     left: 0;
     right: 0;
-    z-index: 2; }
+    z-index: 10; }
 
 .lang {
   float: right;
@@ -1012,7 +1012,7 @@ a {
   height: -webkit-calc(100vh - 157px);
   height: calc(100vh - 157px);
   background-image: url(../images/home/home_transparent_sm.png);
-  box-shadow: inset 0 0 0 1000px rgba(252, 252, 250, 0.65);
+  box-shadow: inset 0 0 0 1000px rgba(252, 252, 247, 0.65);
   background-repeat: no-repeat;
   background-position: bottom left;
   position: relative;
@@ -1023,8 +1023,7 @@ a {
       height: calc(100vh - 182px); } }
   @media screen and (min-width: 46.5em) {
     .home {
-      background-image: url(../images/home/home_transparent_md.png);
-      box-shadow: none; } }
+      background-image: url(../images/home/home_transparent_md.png); } }
   @media screen and (min-width: 81em) {
     .home {
       background-image: url(../images/home/home_transparent.png); } }
